changes buid.gradle