@@ -1,110 +1,179 @@
-buildscript {
-  repositories {
-    maven {
-      url = uri("https://plugins.gradle.org/m2/")
+plugins {
+    id("net.researchgate.release") version "2.8.1"
+    id("com.github.ben-manes.versions") version "0.38.0"
+    id("maven-publish")
+    id("com.diffplug.spotless") version "6.25.0"
+}
+
+
+
+// some parts of the Kotlin DSL don't work inside a `subprojects` block yet, so we do them the old way
+// (without typesafe accessors)
+
+subprojects {
+    // used in per-subproject dependencies
+    // MODIFICA: Assegnazione diretta a 'extra' per evitare il warning "property never used".
+    // I sottoprogetti potranno ancora accedere a rootProject.extra["deps"]
+    extra["deps"] = mapOf(
+        "jupiter" to "5.6.1",
+        "guava" to "20.0",
+        "commons-lang" to "3.4"
+    )
+
+    apply(plugin = "java-library")
+
+    repositories {
+        mavenCentral()
     }
-  }
-  dependencies {
-    classpath("org.javamodularity:moduleplugin:1.8.12")
-  }
-}
 
-// Compiles solely module-info.java with Java 9 compatibility and all other
-// files with Java 8 compatibility
-apply(plugin = "org.javamodularity.moduleplugin")
+    group = "org.roaringbitmap"
 
+    tasks {
+        withType<JavaCompile> {
+            options.isDeprecation = true
+            options.isWarnings = true
+            options.compilerArgs.addAll(
+                listOf("-Xlint:unchecked", "--add-modules", "jdk.incubator.vector", "--enable-preview")
+            )
+            options.release.set(21)
+        }
 
-// Unset Java 8 release applied from root project to allow modularity plugin to
-// control the class file versions.
-tasks.named<JavaCompile>("compileJava") {
-    options.release.set(null as Int?)
-}
+        withType<Javadoc> {
+            options {
+                // suppress javadoc's complaints about undocumented things
+                // we have to set a dummy "value" (here, `true`) to have the option actually used
+                (this as StandardJavadocDocletOptions).addBooleanOption("Xdoclint:none").value = true
+            }
+        }
 
-configure<org.javamodularity.moduleplugin.extensions.ModularityExtension> {
-    mixedJavaRelease(8)
-}
+        withType<Test> {
+            // --- INIZIO MODIFICA PER PARALLELISMO ---
+            // Esegue i test in parallelo usando metà dei core disponibili (minimo 1)
+            maxParallelForks = (Runtime.getRuntime().availableProcessors() / 2).coerceAtLeast(1)
+            // --- FINE MODIFICA ---
 
-// Unset Java 8 release applied from root project to allow modularity plugin to
-// control the class file versions.
-tasks.named<JavaCompile>("compileModuleInfoJava") {
-    options.release.set(null as Int?)
-}
+            jvmArgs("--add-modules", "jdk.incubator.vector", "--enable-preview")
 
-tasks.test {
-    extensions.configure(org.javamodularity.moduleplugin.extensions.TestModuleOptions::class) {
-        // Avoid modules in tests so we can test against Java/JDK 8.
-        setRunOnClasspath(true)
+            val javaToolchains = project.extensions.getByType<JavaToolchainService>()
+            val requestedVersion = (project.properties["testOnJava"] ?: "11").toString().toInt()
+            val currentVersion = JavaVersion.current().majorVersion.toInt()
+            val versionToUse = if (currentVersion > requestedVersion) currentVersion else requestedVersion
+            javaLauncher.set(javaToolchains.launcherFor {
+                languageVersion.set(JavaLanguageVersion.of(versionToUse))
+            })
+        }
+
+        withType<JavaExec> {
+            jvmArgs("--add-modules", "jdk.incubator.vector", "--enable-preview")
+        }
     }
-}
 
-tasks.compileTestJava {
-    extensions.configure(org.javamodularity.moduleplugin.extensions.CompileTestModuleOptions::class) {
-        // Avoid modules in tests so we can test against Java/JDK 8.
-        setCompileOnClasspath(true)
-    }
-}
+    apply(plugin = "com.diffplug.spotless")
 
-val deps: Map<String, String> by extra
+    // You can format the codebase with `./gradlew spotlessApply`
+    // You check the codebase format with `./gradlew spotlessCheck`
+    spotless {
+        // Ratchetting from master means we check/apply only files which are changed relatively to master
+        // This is especially useful for performance, given the whole codebase has been formatted with Spotless.
+        ratchetFrom("origin/master")
 
-dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${deps["jupiter"]}")
-    testImplementation("org.junit.jupiter:junit-jupiter-params:${deps["jupiter"]}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${deps["jupiter"]}")
-    testImplementation("com.google.guava:guava:${deps["guava"]}")
-    testImplementation("org.apache.commons:commons-lang3:${deps["commons-lang"]}")
-    testImplementation("com.esotericsoftware:kryo:5.0.0-RC6")
-    testImplementation("com.fasterxml.jackson.core", "jackson-databind", "2.10.3")
-    testImplementation("org.assertj", "assertj-core", "3.23.1")
-    testImplementation("org.openjdk.jol", "jol-core", "0.16")
-}
-
-sourceSets {
-    create("java11") {
         java {
-            srcDir("src/java11/main")
+            // Disbale javadoc formatting as most the javacode do not follow HTML syntax.
+            googleJavaFormat().reflowLongStrings().formatJavadoc(false)
+            formatAnnotations()
+
+            importOrder("\\#", "org.roaringbitmap", "", "java", "javax")
+            removeUnusedImports()
+
+            trimTrailingWhitespace()
+            endWithNewline()
         }
     }
 }
 
-tasks.named<JavaCompile>("compileJava11Java") {
-    // Arrays.equals exists since JDK9, but we make it available for 11+ so we can test the shim by using Java 11
-    // and the old way by using Java 10, which will compile the new code but not use it..
-    options.release.set(9)
-}
+subprojects.filter { listOf("roaringbitmap", "bsi").contains(it.name) }.forEach { project ->
+    project.run {
+        apply(plugin = "maven-publish")
+        configure<JavaPluginExtension> {
+            withSourcesJar()
+            withJavadocJar()
+        }
 
-tasks.named<Jar>("jar") {
-    into("META-INF/versions/11") {
-        from(sourceSets.named("java11").get().output)
+        configure<PublishingExtension> {
+            publications {
+                register<MavenPublication>("sonatype") {
+                    groupId = project.group.toString()
+                    artifactId = project.name
+                    version = project.version.toString()
+
+                    from(components["java"])
+
+                    // requirements for maven central
+                    // https://central.sonatype.org/pages/requirements.html
+                    pom {
+                        name.set("${project.group}:${project.name}")
+                        description.set("Roaring bitmaps are compressed bitmaps (also called bitsets) which tend to outperform conventional compressed bitmaps such as WAH or Concise.")
+                        url.set("https://github.com/RoaringBitmap/RoaringBitmap")
+                        issueManagement {
+                            system.set("GitHub Issue Tracking")
+                            url.set("https://github.com/RoaringBitmap/RoaringBitmap/issues")
+                        }
+                        licenses {
+                            license {
+                                name.set("Apache 2")
+                                url.set("http://www.apache.org/licenses/LICENSE-2.0.txt")
+                                distribution.set("repo")
+                            }
+                        }
+                        developers {
+                            developer {
+                                id.set("lemire")
+                                name.set("Daniel Lemire")
+                                email.set("lemire@gmail.com")
+                                url.set("http://lemire.me/en/")
+                                roles.addAll("architect", "developer", "maintainer")
+                                timezone.set("-5")
+                                properties.put("picUrl", "http://lemire.me/fr/images/JPG/profile2011B_152.jpg")
+                            }
+                        }
+                        scm {
+                            connection.set("scm:git:https://github.com/RoaringBitmap/RoaringBitmap.git")
+                            developerConnection.set("scm:git:https://github.com/RoaringBitmap/RoaringBitmap.git")
+                            url.set("https://github.com/RoaringBitmap/RoaringBitmap")
+                        }
+                    }
+                }
+            }
+
+            // A safe throw-away place to publish to:
+            // ./gradlew publishSonatypePublicationToLocalDebugRepository -Pversion=foo
+            repositories {
+                maven {
+                    name = "localDebug"
+                    url = project.layout.buildDirectory.dir("repos/localDebug").get().asFile.toURI()
+                }
+            }
+
+            // ./gradlew publishSonatypePublicationToGitHubPackagesRepository
+            repositories {
+                maven {
+                    name = "GitHubPackages"
+                    url = uri("https://maven.pkg.github.com/RoaringBitmap/RoaringBitmap")
+                    credentials {
+                        username = System.getenv("GITHUB_ACTOR")
+                        password = System.getenv("GITHUB_TOKEN")
+                    }
+                }
+            }
+
+        }
+
+
     }
-    manifest.attributes(
-            Pair("Multi-Release", "true")
-    )
-
-    // normally jar is just main classes but we also have another sourceset
-    dependsOn(tasks.named("compileJava11Java"))
 }
 
-tasks.named<Jar>("sourcesJar") {
-    dependsOn(tasks.named("compileModuleInfoJava"))
-}
-
-tasks.test {
-    systemProperty("kryo.unsafe", "false")
-    useJUnitPlatform()
-    failFast = true
-
-    // Define the memory requirements of tests, to prevent issues in CI while OK locally
-    minHeapSize = "2G"
-    maxHeapSize = "2G"
-
-    testLogging {
-        // We exclude 'passed' events
-        events( "skipped", "failed")
-        showStackTraces = true
-        showExceptions = true
-        showCauses = true
-        exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
-        // Helps investigating OOM. But too verbose to be activated by default
-        // showStandardStreams = true
-    }
+release {
+    // for some odd reason, we used to have our tags be of the form roaringbitmap-0.1.0
+    // instead of just 0.1.0 or v0.1.0.
+    tagTemplate = "\$version"
 }
